[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "librosa>=0.10.2.post1",
    "numpy>=2.1.3",
    "pydub>=0.25.1",
    "pyloudnorm>=0.1.1",
    "soundfile>=0.13.1",
    "werkzeug>=3.1.3",
]
